added border to setting sub-heading

--- a/styles/base.less
+++ b/styles/base.less
@@ -84,6 +84,8 @@ atom-pane-container atom-pane .item-views .pane-item,
 
   .sub-section .sub-section-heading {
     background-color: whitesmoke;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
     color: @text-color
   }
 
