--- a/styles/lists.less
+++ b/styles/lists.less
@@ -70,9 +70,7 @@
   }
 }
 .autocomplete-suggestion-list {
-  .icon.property,
-  .icon.tag,
-  .icon.selector {
+  .icon-letter {
     color: @text-color;
     background-color: @base-background-color;
   }
