--- a/styles/base.less
+++ b/styles/base.less
@@ -17,7 +17,9 @@ atom-workspace
 }
 
 code {
-    color: hsl(48, 100%, 84%);
+    color: darken(@text-color-success, 10%);
+    background-color: darken(@base-background-color, 3%);
+    border: 1px solid lighten(@base-background-color, 25%);
 }
 
 atom-pane {
