updated button txt-color

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -43,11 +43,11 @@ button, input, optgroup, select, textarea {
 
 // Colored buttons -----------------------
 
-.btn.btn-primary { .btn-color(@background-color-info); }
+.btn.btn-primary { .btn-color(@background-color-info); color: @base-background-color}
 .btn.btn-info    { .btn-color(@background-color-info); }
-.btn.btn-success { .btn-color(@background-color-success); }
-.btn.btn-warning { .btn-color(@background-color-warning); }
-.btn.btn-error   { .btn-color(@background-color-error); }
+.btn.btn-success { .btn-color(@background-color-success); colro: @base-background-color}
+.btn.btn-warning { .btn-color(@background-color-warning);  colro: @base-background-color}
+.btn.btn-error   { .btn-color(@background-color-error); color: @base-background-color}
 
 .btn-color(@bg) {
   color: @text-color-selected;
