moved git rules to git.less

--- a/styles/git.less
+++ b/styles/git.less
@@ -10,3 +10,63 @@
 .status-modified { color: @text-color-warning; } // orange
 .status-removed  { color: @text-color-error; }   // red
 .status-renamed  { color: @text-color-info; }    // blue
+
+.github {
+  &-StagingView {
+    &-header .icon:before {
+      color: @text-color;
+    }
+    &-headerButton:disabled {
+      color: darken(@text-color, 15%);
+    }
+    &-group.is-focused .is-selected {
+      background-color: darken(@base-background-color, 3%);
+      color: @text-color-selected;
+    }
+    &:focus &-group.is-focused .is-selected {
+      background-color: darken(@base-background-color, 3%);
+      color: @text-color-selected;
+    }
+  }
+
+  &-Project .icon {
+    fill: @text-color;
+  }
+  &-RecentCommits, {
+    border-top: 1px solid @base-border-color;
+  }
+  &-RecentCommit-time,
+  &-CommitView-remaining-characters {
+    color: darken(@text-color, 20%)
+  }
+  &-Accordion {
+    &[open] &-header,
+    &-header {
+      color: @text-color;
+      border-bottom: 1px solid @base-background-color;
+    }
+    &-content {
+      background-color: inherit;
+      color: lighten(@text-color, 25%);
+      border-bottom: 1px solid @base-background-color;
+    }
+  }
+  &-Project {
+    border-bottom: 1px solid @base-background-color;
+  }
+  &-CommitView {
+    &-buttonWrapper {
+      border-bottom: 1px solid @base-background-color;
+    }
+    &-editor {
+      border: 1px solid @base-background-color;
+      box-shadow: 0px 0px 15px -5px darken(@base-background-color, 5%);
+    }
+  }
+  &-CreatePullRequestTile-divider {
+    border-color: lighten(@base-background-color, 10%);
+  }
+  &-FilePatchView-message {
+    color: @text-color;
+  }
+}
