--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -42,6 +42,9 @@
       display: inline;
     }
   }
+  &-right .inline-block {
+    color: @text-color;
+  }
 }
 
 .sb-table.linter {
@@ -87,5 +90,16 @@ input.input-radio, input.input-checkbox, input.input-toggle {
   }
   &-checkbox-label, &-toggle-label, &-toggle-label input {
     color: lighten(@text-color, 20%);
+  }
+}
+
+.php-debug-debug-view-toggle, .php-debug-console-view-toggle{
+  background-color: darken(@base-background-color, 2%);
+  border: 1px solid darken(@base-background-color, 15%);
+  border-radius: 4px;
+  color: @text-color;
+  &:hover {
+    background-color: darken(@base-background-color, 10%);
+    border: 1px solid lighten(@base-background-color, 10%);
   }
 }
